// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FakeRadioCheck /> should be checked w/ onChangeFunction 1`] = `
.c0 {
  display: block;
  position: absolute;
  width: 18px;
  height: 18px;
  top: 50%;
  margin: -9px 0 0 0;
  border: 4px solid #00BBEF;
  background: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px rgb(255,255,255);
  left: 17px;
  border-radius: 100%;
}

<span
  className="c0"
  type="radio"
/>
`;

exports[`<FakeRadioCheck /> should be checked w/ props readOnly 1`] = `
.c0 {
  display: block;
  position: absolute;
  width: 18px;
  height: 18px;
  top: 50%;
  margin: -9px 0 0 0;
  border: 4px solid #00BBEF;
  background: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px rgb(255,255,255);
  left: 17px;
  border-radius: 100%;
}

<span
  className="c0"
  type="radio"
/>
`;

exports[`<FakeRadioCheck /> should render its css w/ props checked 1`] = `
.c0 {
  display: block;
  position: absolute;
  width: 18px;
  height: 18px;
  top: 50%;
  margin: -9px 0 0 0;
  border: 4px solid #00BBEF;
  background: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px rgb(255,255,255);
  left: 17px;
  border-radius: 100%;
  border: 4px solid rgb(255,255,255);
  background-color: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px #00BBEF;
}

<span
  checked={true}
  className="c0"
  type="radio"
/>
`;

exports[`<FakeRadioCheck /> should render its css w/ props giusto 1`] = `
.c0 {
  display: block;
  position: absolute;
  width: 18px;
  height: 18px;
  top: 50%;
  margin: -9px 0 0 0;
  border: 4px solid #00BBEF;
  background: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px rgb(255,255,255);
  left: 17px;
  border-radius: 100%;
  border: 4px solid rgb(255,255,255);
  background-color: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px rgb(153,226,17);
}

<span
  className="c0"
  type="radio"
/>
`;

exports[`<FakeRadioCheck /> should render its css w/ props hasImage 1`] = `
.c0 {
  display: block;
  position: absolute;
  width: 18px;
  height: 18px;
  top: 50%;
  margin: -9px 0 0 0;
  border: 4px solid #00BBEF;
  background: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px rgb(255,255,255);
  left: 17px;
  border-radius: 100%;
  display: none;
}

<span
  className="c0"
  type="radio"
/>
`;

exports[`<FakeRadioCheck /> should render its css w/ props sbagliato 1`] = `
.c0 {
  display: block;
  position: absolute;
  width: 18px;
  height: 18px;
  top: 50%;
  margin: -9px 0 0 0;
  border: 4px solid #00BBEF;
  background: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px rgb(255,255,255);
  left: 17px;
  border-radius: 100%;
  border: 4px solid rgb(255,255,255);
  background-color: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px rgb(255,0,0);
}

<span
  className="c0"
  type="radio"
/>
`;

exports[`<FakeRadioCheck /> should render its css w/ props theme 1`] = `
.c0 {
  display: block;
  position: absolute;
  width: 18px;
  height: 18px;
  top: 50%;
  margin: -9px 0 0 0;
  border: 4px solid #111111;
  background: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px rgb(255,255,255);
  border: 4px solid rgb(255,255,255);
  background-color: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px #111111;
}

<span
  checked={true}
  className="c0"
/>
`;

exports[`<FakeRadioCheck /> should render its css w/ props type === checkbox 1`] = `
.c0 {
  display: block;
  position: absolute;
  width: 18px;
  height: 18px;
  top: 50%;
  margin: -9px 0 0 0;
  border: 4px solid #00BBEF;
  background: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px rgb(255,255,255);
  left: 12px;
}

<span
  className="c0"
  type="checkbox"
/>
`;

exports[`<FakeRadioCheck /> should render its css w/ props type === radio 1`] = `
.c0 {
  display: block;
  position: absolute;
  width: 18px;
  height: 18px;
  top: 50%;
  margin: -9px 0 0 0;
  border: 4px solid #00BBEF;
  background: rgb(255,255,255);
  box-shadow: inset 0 0 0 3px rgb(255,255,255);
  left: 17px;
  border-radius: 100%;
}

<span
  className="c0"
  type="radio"
/>
`;

exports[`<RadioCheck /> should render its css w/ props checked 1`] = `
<RadioCheck__RadioCheckLabel
  checked={true}
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  type="radio"
>
  <RadioCheck__FakeRadioCheck
    checked={true}
    theme={
      Object {
        "brand": "#00BBEF",
      }
    }
    type="radio"
  />
</RadioCheck__RadioCheckLabel>
`;

exports[`<RadioCheck /> should render its css w/ props giusto 1`] = `
<RadioCheck__RadioCheckLabel
  giusto={true}
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  type="radio"
>
  <RadioCheck__FakeRadioCheck
    giusto={true}
    theme={
      Object {
        "brand": "#00BBEF",
      }
    }
    type="radio"
  />
</RadioCheck__RadioCheckLabel>
`;

exports[`<RadioCheck /> should render its css w/ props sbagliato 1`] = `
<RadioCheck__RadioCheckLabel
  sbagliato={true}
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  type="radio"
>
  <RadioCheck__FakeRadioCheck
    sbagliato={true}
    theme={
      Object {
        "brand": "#00BBEF",
      }
    }
    type="radio"
  />
</RadioCheck__RadioCheckLabel>
`;

exports[`<RadioCheck /> should render its css w/ props type === checkbox && hasImage 1`] = `
<RadioCheck__RadioCheckLabel
  hasImage={true}
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  type="checkbox"
>
  <RadioCheck__FakeRadioCheck
    hasImage={true}
    theme={
      Object {
        "brand": "#00BBEF",
      }
    }
    type="checkbox"
  />
</RadioCheck__RadioCheckLabel>
`;

exports[`<RadioCheck /> should render its css w/ props type === checkbox if !hasImage 1`] = `
<RadioCheck__RadioCheckLabel
  hasImage={false}
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  type="checkbox"
>
  <RadioCheck__FakeRadioCheck
    hasImage={false}
    theme={
      Object {
        "brand": "#00BBEF",
      }
    }
    type="checkbox"
  />
</RadioCheck__RadioCheckLabel>
`;

exports[`<RadioCheck /> should render its css w/ props type === radio && hasImage 1`] = `
<RadioCheck__RadioCheckLabel
  hasImage={true}
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  type="radio"
>
  <RadioCheck__FakeRadioCheck
    hasImage={true}
    theme={
      Object {
        "brand": "#00BBEF",
      }
    }
    type="radio"
  />
</RadioCheck__RadioCheckLabel>
`;

exports[`<RadioCheck /> should render its css w/ props type === radio if !hasImage 1`] = `
<RadioCheck__RadioCheckLabel
  hasImage={false}
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  type="radio"
>
  <RadioCheck__FakeRadioCheck
    hasImage={false}
    theme={
      Object {
        "brand": "#00BBEF",
      }
    }
    type="radio"
  />
</RadioCheck__RadioCheckLabel>
`;

exports[`<RadioCheck /> should render its label w/ props hasImage 1`] = `
<RadioCheck__RadioCheckLabel
  hasImage={true}
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  type="radio"
>
  <RadioCheck__FakeRadioCheck
    hasImage={true}
    theme={
      Object {
        "brand": "#00BBEF",
      }
    }
    type="radio"
  />
</RadioCheck__RadioCheckLabel>
`;

exports[`<RadioCheck /> should render its label w/ props label 1`] = `
<RadioCheck__RadioCheckLabel
  theme={
    Object {
      "brand": "#00BBEF",
    }
  }
  type="radio"
>
  <RadioCheck__FakeRadioCheck
    theme={
      Object {
        "brand": "#00BBEF",
      }
    }
    type="radio"
  />
  Etichetta
</RadioCheck__RadioCheckLabel>
`;

exports[`<RadioCheckLabel /> should render its css w/ props bgcolor 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  margin: 10px 0;
  background-color: red;
  border-radius: 100px;
  padding: 12px 16px 11px 52px;
}

.c0 a {
  color: currentColor;
}

.c0 img {
  max-height: 200px;
}

@media (min-width:64.0625em) {
  .c0 {
    border: 1px solid rgba(0,0,0,0.05);
    border-bottom-width: 2px;
  }
}

<label
  className="c0"
  type="radio"
/>
`;

exports[`<RadioCheckLabel /> should render its css w/ props checked && !hasImage 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  margin: 10px 0;
  background-color: rgb(255,255,255);
  border-radius: 100px;
  padding: 12px 16px 11px 52px;
  color: rgb(255,255,255);
  background-color: #00BBEF;
}

.c0 a {
  color: currentColor;
}

.c0 img {
  max-height: 200px;
}

@media (min-width:64.0625em) {
  .c0 {
    border: 1px solid rgba(0,0,0,0.05);
    border-bottom-width: 2px;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    border-bottom-width: 1px;
  }
}

<label
  checked={true}
  className="c0"
  type="radio"
/>
`;

exports[`<RadioCheckLabel /> should render its css w/ props checked && hasImage 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  margin: 10px 0;
  background-color: rgb(255,255,255);
  text-align: center;
  border-radius: 6px;
  padding: 12px;
  display: inline-block;
  width: 48%;
  margin: 1%;
  box-shadow: 0 0 0 4px #00BBEF;
}

.c0 a {
  color: currentColor;
}

.c0 img {
  max-height: 200px;
}

@media (min-width:64.0625em) {
  .c0 {
    border: 1px solid rgba(0,0,0,0.05);
    border-bottom-width: 2px;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    border: none;
  }
}

<label
  checked={true}
  className="c0"
  type="radio"
/>
`;

exports[`<RadioCheckLabel /> should render its css w/ props giusto && !hasImage 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  margin: 10px 0;
  background-color: rgb(255,255,255);
  border-radius: 100px;
  padding: 12px 16px 11px 52px;
  color: rgb(255,255,255);
  background-color: rgb(153,226,17);
}

.c0 a {
  color: currentColor;
}

.c0 img {
  max-height: 200px;
}

@media (min-width:64.0625em) {
  .c0 {
    border: 1px solid rgba(0,0,0,0.05);
    border-bottom-width: 2px;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    border-bottom-width: 1px;
  }
}

<label
  className="c0"
  type="radio"
/>
`;

exports[`<RadioCheckLabel /> should render its css w/ props giusto && hasImage 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  margin: 10px 0;
  background-color: rgb(255,255,255);
  text-align: center;
  border-radius: 6px;
  padding: 12px;
  display: inline-block;
  width: 48%;
  margin: 1%;
  box-shadow: 0 0 0 4px rgb(153,226,17);
}

.c0 a {
  color: currentColor;
}

.c0 img {
  max-height: 200px;
}

@media (min-width:64.0625em) {
  .c0 {
    border: 1px solid rgba(0,0,0,0.05);
    border-bottom-width: 2px;
  }
}

<label
  className="c0"
  type="radio"
/>
`;

exports[`<RadioCheckLabel /> should render its css w/ props sbagliato && !hasImage 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  margin: 10px 0;
  background-color: rgb(255,255,255);
  border-radius: 100px;
  padding: 12px 16px 11px 52px;
  color: rgb(255,255,255);
  background-color: rgb(255,0,0);
}

.c0 a {
  color: currentColor;
}

.c0 img {
  max-height: 200px;
}

@media (min-width:64.0625em) {
  .c0 {
    border: 1px solid rgba(0,0,0,0.05);
    border-bottom-width: 2px;
  }
}

@media (min-width:64.0625em) {
  .c0 {
    border-bottom-width: 1px;
  }
}

<label
  className="c0"
  type="radio"
/>
`;

exports[`<RadioCheckLabel /> should render its css w/ props sbagliato && hasImage 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  margin: 10px 0;
  background-color: rgb(255,255,255);
  text-align: center;
  border-radius: 6px;
  padding: 12px;
  display: inline-block;
  width: 48%;
  margin: 1%;
  box-shadow: 0 0 0 4px rgb(255,0,0);
}

.c0 a {
  color: currentColor;
}

.c0 img {
  max-height: 200px;
}

@media (min-width:64.0625em) {
  .c0 {
    border: 1px solid rgba(0,0,0,0.05);
    border-bottom-width: 2px;
  }
}

<label
  className="c0"
  type="radio"
/>
`;

exports[`<RadioCheckLabel /> should render its css w/ props type === checkbox && !hasImage 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  margin: 10px 0;
  background-color: rgb(255,255,255);
  border-radius: 3px;
  padding: 10px 16px 10px 44px;
}

.c0 a {
  color: currentColor;
}

.c0 img {
  max-height: 200px;
}

@media (min-width:64.0625em) {
  .c0 {
    border: 1px solid rgba(0,0,0,0.05);
    border-bottom-width: 2px;
  }
}

<label
  className="c0"
  type="checkbox"
/>
`;

exports[`<RadioCheckLabel /> should render its css w/ props type === checkbox && hasImage 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  margin: 10px 0;
  background-color: rgb(255,255,255);
  padding: 12px;
  display: inline-block;
  width: 48%;
  margin: 1%;
}

.c0 a {
  color: currentColor;
}

.c0 img {
  max-height: 200px;
}

@media (min-width:64.0625em) {
  .c0 {
    border: 1px solid rgba(0,0,0,0.05);
    border-bottom-width: 2px;
  }
}

<label
  className="c0"
  type="checkbox"
/>
`;

exports[`<RadioCheckLabel /> should render its css w/ props type === radio && !hasImage 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  margin: 10px 0;
  background-color: rgb(255,255,255);
  border-radius: 100px;
  padding: 12px 16px 11px 52px;
}

.c0 a {
  color: currentColor;
}

.c0 img {
  max-height: 200px;
}

@media (min-width:64.0625em) {
  .c0 {
    border: 1px solid rgba(0,0,0,0.05);
    border-bottom-width: 2px;
  }
}

<label
  className="c0"
  type="radio"
/>
`;

exports[`<RadioCheckLabel /> should render its css w/ props type === radio && hasImage 1`] = `
.c0 {
  position: relative;
  display: block;
  width: 100%;
  margin: 10px 0;
  background-color: rgb(255,255,255);
  text-align: center;
  border-radius: 6px;
  padding: 12px;
  display: inline-block;
  width: 48%;
  margin: 1%;
}

.c0 a {
  color: currentColor;
}

.c0 img {
  max-height: 200px;
}

@media (min-width:64.0625em) {
  .c0 {
    border: 1px solid rgba(0,0,0,0.05);
    border-bottom-width: 2px;
  }
}

<label
  className="c0"
  type="radio"
/>
`;
